--- a/Web/N2_changeformat.ipynb
+++ b/Web/N2_changeformat.ipynb
@@ -4,59 +4,148 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 10.1103/PhysRevD.102.032007\n",
-      "\n",
-      "['Physical Review D', '102', '3', '032007', '2020/08/19']\n",
-      " \n",
-      "1 10.1007/JHEP06(2020)146\n",
-      "\n",
-      "['Journal of High Energy Physics', '2020', '6', '146', '2020/06/24']\n",
-      " \n",
-      "2 10.1007/JHEP05(2020)032\n",
-      "\n",
-      "['Journal of High Energy Physics', '2020', '5', '32', '2020/05/08']\n",
-      " \n",
-      "3 10.1103/PhysRevLett.124.162002\n",
-      "\n",
-      "['Physical Review Letters', '124', '16', '162002', '2020/04/24']\n",
-      " \n",
-      "4 10.1007/s41781-020-00041-z\n",
-      "\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-3eaf67b2acaa>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     39\u001b[0m                 \u001b[0mparse\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'pdf'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     40\u001b[0m                 \u001b[0mpaper_url\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"/\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mparse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 41\u001b[1;33m         \u001b[0mattribute\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msoup\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind_all\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"meta\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m{\u001b[0m\u001b[1;34m\"name\"\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'content'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     42\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     43\u001b[0m     \u001b[0mcnt\u001b[0m\u001b[1;33m+=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#paper_downloader.py\n",
     "\n",
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
     "\n",
-    "f1 = open(\"./normal_doi_list2.txt\",\"r\")\n",
-    "f2 = open(\"./paper_list2.txt\",\"w\")\n",
-    "f3 = open(\"./paper_url2.txt\",\"w\")\n",
+    "f1 = open(\"./normal_doi_list.txt\",\"r\")\n",
+    "f2 = open(\"./paper_list.txt\",\"w\")\n",
+    "f3 = open(\"./paper_url.txt\",\"w\")\n",
     "\n",
     "attribute_name = ['citation_journal_title','citation_volume','citation_issue','citation_firstpage','citation_date']\n",
     "\n",
-    "line_list = f1.readlines()\n",
     "\n",
+    "line_list = [line.rstrip() for line in f1.readlines()]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['10.1103/PhysRevD.102.032007', '10.1007/JHEP06(2020)146', '10.1007/JHEP05(2020)032', '10.1103/PhysRevLett.124.162002', '10.1103/PhysRevLett.124.131802', '10.1007/JHEP06(2020)018', '10.1007/JHEP03(2020)131', '10.1007/JHEP03(2020)034', '10.1007/JHEP02(2020)191', '10.1007/JHEP03(2020)103', '10.1103/PhysRevD.101.052010', '10.1007/JHEP03(2020)051', '10.1007/JHEP05(2020)033', '10.1103/PhysRevLett.124.202001', '10.1007/JHEP03(2020)055', '10.1103/PhysRevLett.125.102001', '10.1007/JHEP02(2020)015', '10.1007/JHEP05(2020)052', '10.1007/JHEP08(2020)139', '10.1103/PhysRevD.102.072001', '10.1103/PhysRevLett.125.152001', '10.1007/JHEP08(2020)051', '10.1007/JHEP07(2020)115', '10.1007/JHEP07(2020)116', '10.1103/PhysRevLett.125.061801', '10.1007/JHEP07(2020)125', '10.1140/epjc/s10052-020-8166-5', '10.1007/JHEP06(2020)076', '10.1140/epjc/s10052-020-8168-3', '10.1007/JHEP07(2020)126']\n",
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(line_list)\n",
+    "print(len(line_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 10.1103/PhysRevD.102.032007\n",
+      "['Physical Review D', '102', '3', '032007', '2020/08/19']\n",
+      " \n",
+      "1 10.1007/JHEP06(2020)146\n",
+      "['Journal of High Energy Physics', '2020', '6', '146', '2020/06/24']\n",
+      " \n",
+      "2 10.1007/JHEP05(2020)032\n",
+      "['Journal of High Energy Physics', '2020', '5', '32', '2020/05/08']\n",
+      " \n",
+      "3 10.1103/PhysRevLett.124.162002\n",
+      "['Physical Review Letters', '124', '16', '162002', '2020/04/24']\n",
+      " \n",
+      "4 10.1103/PhysRevLett.124.131802\n",
+      "['Physical Review Letters', '124', '13', '131802', '2020/04/03']\n",
+      " \n",
+      "5 10.1007/JHEP06(2020)018\n",
+      "['Journal of High Energy Physics', '2020', '6', '18', '2020/06/01']\n",
+      " \n",
+      "6 10.1007/JHEP03(2020)131\n",
+      "['Journal of High Energy Physics', '2020', '3', '131', '2020/03/24']\n",
+      " \n",
+      "7 10.1007/JHEP03(2020)034\n",
+      "['Journal of High Energy Physics', '2020', '3', '34', '2020/03/06']\n",
+      " \n",
+      "8 10.1007/JHEP02(2020)191\n",
+      "['Journal of High Energy Physics', '2020', '2', '191', '2020/02/28']\n",
+      " \n",
+      "9 10.1007/JHEP03(2020)103\n",
+      "['Journal of High Energy Physics', '2020', '3', '103', '2020/03/18']\n",
+      " \n",
+      "10 10.1103/PhysRevD.101.052010\n",
+      "['Physical Review D', '101', '5', '052010', '2020/03/25']\n",
+      " \n",
+      "11 10.1007/JHEP03(2020)051\n",
+      "['Journal of High Energy Physics', '2020', '3', '51', '2020/03/10']\n",
+      " \n",
+      "12 10.1007/JHEP05(2020)033\n",
+      "['Journal of High Energy Physics', '2020', '5', '33', '2020/05/08']\n",
+      " \n",
+      "13 10.1103/PhysRevLett.124.202001\n",
+      "['Physical Review Letters', '124', '20', '202001', '2020/05/21']\n",
+      " \n",
+      "14 10.1007/JHEP03(2020)055\n",
+      "['Journal of High Energy Physics', '2020', '3', '55', '2020/03/10']\n",
+      " \n",
+      "15 10.1103/PhysRevLett.125.102001\n",
+      "['Physical Review Letters', '125', '10', '102001', '2020/09/03']\n",
+      " \n",
+      "16 10.1007/JHEP02(2020)015\n",
+      "['Journal of High Energy Physics', '2020', '2', '15', '2020/02/03']\n",
+      " \n",
+      "17 10.1007/JHEP05(2020)052\n",
+      "['Journal of High Energy Physics', '2020', '5', '52', '2020/05/12']\n",
+      " \n",
+      "18 10.1007/JHEP08(2020)139\n",
+      "['Journal of High Energy Physics', '2020', '8', '139', '2020/08/27']\n",
+      " \n",
+      "19 10.1103/PhysRevD.102.072001\n",
+      "['Physical Review D', '102', '7', '072001', '2020/10/05']\n",
+      " \n",
+      "20 10.1103/PhysRevLett.125.152001\n",
+      "['Physical Review Letters', '125', '15', '152001', '2020/10/07']\n",
+      " \n",
+      "21 10.1007/JHEP08(2020)051\n",
+      "['Journal of High Energy Physics', '2020', '8', '51', '2020/08/12']\n",
+      " \n",
+      "22 10.1007/JHEP07(2020)115\n",
+      "['Journal of High Energy Physics', '2020', '7', '115', '2020/07/17']\n",
+      " \n",
+      "23 10.1007/JHEP07(2020)116\n",
+      "['Journal of High Energy Physics', '2020', '7', '116', '2020/07/17']\n",
+      " \n",
+      "24 10.1103/PhysRevLett.125.061801\n",
+      "['Physical Review Letters', '125', '6', '061801', '2020/08/05']\n",
+      " \n",
+      "25 10.1007/JHEP07(2020)125\n",
+      "['Journal of High Energy Physics', '2020', '7', '125', '2020/07/20']\n",
+      " \n",
+      "26 10.1140/epjc/s10052-020-8166-5\n",
+      "['The European Physical Journal C', '80', '8', '718', '2020/08/10']\n",
+      " \n",
+      "27 10.1007/JHEP06(2020)076\n",
+      "['Journal of High Energy Physics', '2020', '6', '76', '2020/06/10']\n",
+      " \n",
+      "28 10.1140/epjc/s10052-020-8168-3\n",
+      "['The European Physical Journal C', '80', '8', '752', '2020/08/18']\n",
+      " \n",
+      "29 10.1007/JHEP07(2020)126\n",
+      "['Journal of High Energy Physics', '2020', '7', '126', '2020/07/20']\n",
+      " \n"
+     ]
+    }
+   ],
+   "source": [
     "for cnt,line in enumerate(line_list):\n",
-    "    if not line: break\n",
+    "    \n",
     "    print(cnt, line)\n",
     "    req = requests.get('https://doi.org/'+line)\n",
     "    html = req.text\n",
@@ -92,15 +181,8 @@
     "\n",
     "f1.close()\n",
     "f2.close()\n",
-    "f3.close()\n"
+    "f3.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -126,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
