--- a/Web/N2_changeformat.ipynb
+++ b/Web/N2_changeformat.ipynb
@@ -2,42 +2,98 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 10.1103/PhysRevD.102.032007\n",
+      "0 10.1103/PhysRevD.105.072008\n",
       "\n",
-      "['Physical Review D', '102', '3', '032007', '2020/08/19']\n",
+      "['Physical Review D', '105', '7', '072008', '2022/04/26']\n",
       " \n",
-      "1 10.1007/JHEP06(2020)146\n",
+      "1 10.1007/JHEP04(2022)062\n",
       "\n",
-      "['Journal of High Energy Physics', '2020', '6', '146', '2020/06/24']\n",
+      "['Journal of High Energy Physics', '2022', '4', '62', '2022/04/11']\n",
       " \n",
-      "2 10.1007/JHEP05(2020)032\n",
+      "2 10.1007/JHEP02(2022)169\n",
       "\n",
-      "['Journal of High Energy Physics', '2020', '5', '32', '2020/05/08']\n",
+      "['Journal of High Energy Physics', '2022', '2', '169', '2022/02/21']\n",
       " \n",
-      "3 10.1103/PhysRevLett.124.162002\n",
+      "3 10.1103/PhysRevD.105.052003\n",
       "\n",
-      "['Physical Review Letters', '124', '16', '162002', '2020/04/24']\n",
+      "['Physical Review D', '105', '5', '052003', '2022/03/09']\n",
       " \n",
-      "4 10.1007/s41781-020-00041-z\n",
-      "\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-3eaf67b2acaa>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     39\u001b[0m                 \u001b[0mparse\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'pdf'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     40\u001b[0m                 \u001b[0mpaper_url\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"/\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mparse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 41\u001b[1;33m         \u001b[0mattribute\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msoup\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind_all\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"meta\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m{\u001b[0m\u001b[1;34m\"name\"\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'content'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     42\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     43\u001b[0m     \u001b[0mcnt\u001b[0m\u001b[1;33m+=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+      "4 10.1007/JHEP04(2022)087\n",
+      "\n",
+      "['Journal of High Energy Physics', '2022', '4', '87', '2022/04/14']\n",
+      " \n",
+      "5 10.1007/JHEP02(2022)142\n",
+      "\n",
+      "['Journal of High Energy Physics', '2022', '2', '142', '2022/02/17']\n",
+      " \n",
+      "6 10.1007/JHEP04(2022)091\n",
+      "\n",
+      "['Journal of High Energy Physics', '2022', '4', '91', '2022/04/14']\n",
+      " \n",
+      "7 10.1007/JHEP03(2022)189\n",
+      "\n",
+      "['Journal of High Energy Physics', '2022', '3', '189', '2022/03/28']\n",
+      " \n",
+      "Exclude..IOP 10.1088/1748-0221/17/03/P03014\n",
+      "\n",
+      "9 10.1007/JHEP02(2022)107\n",
+      "\n",
+      "['Journal of High Energy Physics', '2022', '2', '107', '2022/02/14']\n",
+      " \n",
+      "10 10.1140/epjc/s10052-022-10127-0\n",
+      "\n",
+      "['The European Physical Journal C', '82', '4', '290', '2022/04/04']\n",
+      " \n",
+      "11 10.1007/JHEP03(2022)160\n",
+      "\n",
+      "['Journal of High Energy Physics', '2022', '3', '160', '2022/03/24']\n",
+      " \n",
+      "12 10.1140/epjc/s10052-022-10027-3\n",
+      "\n",
+      "['The European Physical Journal C', '82', '2', '153', '2022/02/17']\n",
+      " \n",
+      "13 10.1007/JHEP01(2022)177\n",
+      "\n",
+      "['Journal of High Energy Physics', '2022', '1', '177', '2022/01/28']\n",
+      " \n",
+      "14 10.1103/PhysRevD.105.032008\n",
+      "\n",
+      "['Physical Review D', '105', '3', '032008', '2022/02/25']\n",
+      " \n",
+      "15 10.1007/JHEP01(2022)188\n",
+      "\n",
+      "['Journal of High Energy Physics', '2022', '1', '188', '2022/01/31']\n",
+      " \n",
+      "16 10.1007/JHEP11(2021)111\n",
+      "\n",
+      "['Journal of High Energy Physics', '2021', '11', '111', '2021/11/15']\n",
+      " \n",
+      "17 10.1007/JHEP12(2021)161\n",
+      "\n",
+      "['Journal of High Energy Physics', '2021', '12', '161', '2021/12/22']\n",
+      " \n",
+      "18 10.1103/PhysRevD.104.092013\n",
+      "\n",
+      "['Physical Review D', '104', '9', '092013', '2021/11/30']\n",
+      " \n",
+      "19 10.1007/JHEP12(2021)083\n",
+      "\n",
+      "['Journal of High Energy Physics', '2021', '12', '83', '2021/12/13']\n",
+      " \n",
+      "20 10.1007/JHEP11(2021)153\n",
+      "\n",
+      "['Journal of High Energy Physics', '2021', '11', '153', '2021/11/19']\n",
+      " \n",
+      "21 10.1007/JHEP10(2021)045\n",
+      "['Journal of High Energy Physics', '2021', '10', '45', '2021/10/06']\n",
+      " \n"
      ]
     }
    ],
@@ -47,17 +103,22 @@
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
     "\n",
-    "f1 = open(\"./normal_doi_list2.txt\",\"r\")\n",
-    "f2 = open(\"./paper_list2.txt\",\"w\")\n",
-    "f3 = open(\"./paper_url2.txt\",\"w\")\n",
+    "f1 = open(\"./normal_doi_list.txt\",\"r\")\n",
+    "f2 = open(\"./paper_list.txt\",\"w\")\n",
+    "f3 = open(\"./paper_url.txt\",\"w\")\n",
     "\n",
     "attribute_name = ['citation_journal_title','citation_volume','citation_issue','citation_firstpage','citation_date']\n",
     "\n",
     "line_list = f1.readlines()\n",
     "\n",
     "for cnt,line in enumerate(line_list):\n",
-    "    if not line: break\n",
+    "    if (len(line.split('/')) >=5) and (\"P0\" in line.split('/')[-1]):\n",
+    "        print(\"Exclude..IOP\",line)\n",
+    "        continue\n",
+    "    \n",
     "    print(cnt, line)\n",
+    "    \n",
+    "    \n",
     "    req = requests.get('https://doi.org/'+line)\n",
     "    html = req.text\n",
     "    soup = BeautifulSoup(html,'html.parser')\n",
